Include Bearer authentication in OpenApi spec
