# ones-webapp/src/main/java/de/fourtyseveneleven/ones/common/controller/AuthenticatedController.java
@@ -1,0 +1,9 @@
+package de.fourtyseveneleven.ones.common.controller;
+
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@SecurityRequirement(name = "bearerAuth")
+public abstract class AuthenticatedController {
+}
